# rpass

./: Cargo.toml  LICENSE  README.md
rpass/: Cargo.toml
rpass/src/: error.rs  key.rs  lib.rs  record.rs  session.rs
rpass/src/session/: authorized.rs  common_data.rs  connector.rs  mod.rs  unauthorized.rs  utils.rs
rpass_db/: Cargo.toml
rpass_db/src/: callbacks.rs  main.rs  request_dispatcher.rs  server.rs  session.rs  storage.rs
rpass_db/src/callbacks/: confirm_login.rs  delete_me.rs  delete_record.rs  error.rs  list_records.rs  login.rs  mod.rs  new_record.rs  quit.rs  register.rs  show_record.rs  utils.rs
rpass_db/src/storage/: error.rs  mod.rs  record.rs  user_storage.rs
rpass_server/: Cargo.toml
rpass_server/src/: callbacks.rs  main.rs  request_dispatcher.rs  server.rs  session.rs  storage.rs
rpass_server/src/callbacks/: confirm_login.rs  delete_me.rs  delete_record.rs  error.rs  errors.rs  list_records.rs  login.rs  mod.rs  new_record.rs  quit.rs  register.rs  show_record.rs  utils.rs
rpass_server/src/request_dispatcher/: mod.rs
rpass_server/src/storage/: error.rs  mod.rs  record.rs  storage.rs  user_dir.rs  user_storage.rs
