[package]
name = "rpass"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = "0.4"
byteorder = "1.4.3"
thiserror = "1.0"
enum-as-inner = "0.3.3"
mockall_double = "0.2.0"
serde_internal = { package = "serde", version = "1.0", optional = true, features = ["derive"] }

[dev-dependencies]
mockall = "0.10.2"

[features]
enable-serde = ["serde_internal", "num-bigint/serde"]
