[package]
name = "rpass_db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rpass = {path = "../rpass", version = "0.1.0"}
crossbeam-utils = "0.8.5"
dirs = "4.0.0"
thiserror = "1.0"
anyhow = "1.0"
rand = "0.8.4"
regex = "1.5"
lazy_static = "1.4.0"
mockall_double = "0.2.0"
enum-as-inner = "0.3.3"

[dev-dependencies]
mockall = "0.11.0"
