[package]
name = "rpass_server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rpass = {path = "../rpass", version = "0.1.0"}
crossbeam-utils = "0.8.5"
dirs = "3.0.1"
thiserror = "1.0"
anyhow = "1.0"
rand = "0.8.4"
